# Government-Asset-Tracker

./: .gitignore  .replit  app.py  config.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt
ai_module/: generator.py
attached_assets/: Pasted-Analyze-the-structure-and-functionality-of-the-website-_1773135720060.txt  Pasted-Analyze-the-structure-and-functionality-of-the-website-_1773136444336.txt  Pasted-Build-a-FULLY-AUTOMATED-All-India-Government-Job-Portal_1773121722769.txt  Pasted-Build-a-FULLY-AUTOMATED-PROFESSIONAL-All-India-Governme_1773120935773.txt
routes/: admin.py  api.py  main.py
scraper/: scraper.py
scrapers/: __init__.py  base_scraper.py  freejobalert_scraper.py  ibps_scraper.py  pdf_extractor.py  railway_scraper.py  sarkariresult_scraper.py  ssc_scraper.py  upsc_scraper.py
static/css/: style.css
static/js/: main.js
telegram_bot/: bot.py
templates/: base.html  category.html  index.html  job_detail.html  jobs_by_type.html  latest_notifications.html  qualification.html  search.html  state.html
templates/admin/: add_job.html  base_admin.html  categories.html  dashboard.html  edit_job.html  jobs.html  login.html  notifications.html  scraped_jobs.html  subscribers.html
