[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.1.0",
    "openai>=2.26.0",
    "psycopg2-binary>=2.9.11",
    "python-slugify>=8.0.4",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
